--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,5 @@ name = "advent-of-code-2024"
 edition = "2021"
 
 [dependencies]
+itertools = "0.13.0"
 regex = "1.11.1"
-
-[dev-dependencies]
-criterion = "0.5.1"
-
-[[bench]]
-name = "day01"
-harness = false
